# pantheon

./: .dockerignore  .editorconfig  .env.cloud  .env.example  .env.template  .gcloudignore  .gitattributes  .gitignore  .gitleaks.toml  .prettierignore  .prettierrc  .tool-versions  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.proxy  IMPLEMENTATION_ROADMAP.md  LICENSE  PHASE3_TEMPLATE.md  QUICKSTART.md  README.md  SECURITY.md  SETUP_CHECKLIST.md  SPEC.md  TRADEMARKS.md  cloudbuild-migrate-0031.yaml  cloudbuild-migrate-0032.yaml  cloudbuild-migrate-0034.yaml  cloudbuild-portal-v3.6.5.yaml  cloudbuild-portal.yaml  cloudbuild-proxy-v0.6.12.yaml  cloudbuild-proxy-v0.6.17.yaml  cloudbuild-retention-v0.1.0.yaml  cloudbuild-soulwatch-v2.5.0.yaml  cloudbuild-soulwatch-v2.6.1.yaml  cloudbuild-soulwatch-v2.6.5.yaml  cloudbuild.yaml  deploy-v2.3.1.sh  deploy.sh  (+16 more)
apps/matrix-bridge/appservice/: Dockerfile  README.md  pyproject.toml  tiresias-appservice.yaml
apps/matrix-bridge/appservice/tests/: conftest.py  test_config.py  test_event_forwarder.py  test_hardening.py  test_logging_setup.py  test_main.py  test_provisioners.py  test_seed_rooms.py  test_synapse_admin.py
apps/platform-api/: .dockerignore  .env.enterprise.template  .gcloudignore  ARCHITECTURE.md  CHANGELOG.md  DECISION_REQUESTS.md  Dockerfile  Dockerfile.billing-aggregator  Dockerfile.proxy  Dockerfile.retention  QUICKSTART.md  README.md  SECURITY.md  TIRESIAS_MASTER_SPEC.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  gsd_workflow.md  pyproject.toml
apps/platform-api/.planning/: GA_SPEC.md  REQUIREMENTS.md  SALUCA-033-aletheia-provisional.md  SECURITY_ASSESSMENT_APPSEC.md  session_backup_2026-03-18.md
apps/platform-api/.planning/partner-builds/: 04-partner-email-templates.md  05-reseller-mssp-differentiation.md  CODE_QUALITY_REPORT.md
apps/platform-api/alembic/versions/: 0001_initial_schema.py  0002_add_waitlist_table.py  0004_audit_prev_hash_column.py  0005_oidc_sso.py  0006_local_auth.py  0007a_create_tiresias_storage_tables.py  0008_add_split_token_columns.py  0009_normalize_tier_default.py  0012_add_stripe_customer_id_column.py  0015_add_siem_connectors_table.py  0021_add_partner_admin_columns.py  0022_add_webhook_idempotency.py  0023_add_partner_applications.py  0024_saas_proxy_mode.py  0026_policy_history.py  0028a_create_soulwatch_storage_tables.py  0029_add_soulwatch_detections_noise_classification.py  0030_add_security_audit_table.py  0033_add_retention_policies.py  0036_add_mfa_credentials_and_auditor_role.py  0039_agos_agents_and_prompts.py  0040_drop_soulkeys_agent_id.py  0041_pantheon_config.py  0042_tenant_provider_keys.py
apps/platform-api/cmd/tiresias-exec/: Makefile  executor.go  go.mod
apps/platform-api/config/: settings.py
apps/platform-api/database/: schema.sql
apps/platform-api/deploy/: .env.production.template  INSTALL.md  SOUL_SPOF_RUNBOOK.md  TROUBLESHOOTING.md
apps/platform-api/deployment/: node-pep-agent.yaml
apps/platform-api/docs/: ADMIN_GUIDE.md  ADMIN_GUIDE_OUTLINE.md  AGENTIC_OS_TOUR.md  AGENTS_GUIDE.md  ANALYST_GUIDE.md  ARCHITECTURE.md  CONTRACT_EXCHANGE_SPEC.md  DATA_ACCESS_GRANULARITY_SPEC.md  GKE_CAPACITY_PLAN.md  PARTNER_DEPLOYMENT_RUNBOOK.md  PARTNER_STRIPE_SETUP.md  PLATFORM_OVERVIEW.md  REWRITE_PLAN.md  USER_GUIDE.md
apps/platform-api/docs/chapters/: part1-getting-started.md  part10-reference.md  part2-auth-access.md  part3-agent-security.md  part5-gateway-security.md  part6-observability.md  part7-enterprise.md
apps/platform-api/docs/drilldowns/: deployment-walkthrough.md  portal-page-guide.md  rbac-permission-matrix.md  troubleshooting-flowcharts.md
apps/platform-api/docs/plans/: PORTAL_SPLIT_SPEC.md
apps/platform-api/k8s/: fluent-bit-configmap.yaml  fluent-bit-partner-secrets.yaml  gatus-deployment.yaml  marketing-deployment.yaml  migrate-0032-job.yaml  migrate-0033-job.yaml  migrate-0034-job.yaml  migrate-0038-job.yaml  namespace.yaml  network-policy.yaml  partner-secrets.yaml.example  pdb.yaml  platform-cert.yaml  psql-query-pod.yaml  redis-deployment.yaml  retention-verify-job.yaml  soulauth-deployment.yaml
apps/platform-api/k8s/cronjobs/: trend-sampler.yaml
apps/platform-api/k8s/pantheon/: RUNBOOK.md  backendconfigs.yaml  cert.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  (+17 more)
apps/platform-api/monitoring/: alert_rules.yml
apps/platform-api/portal/: Dockerfile  package.json
apps/platform-api/portal-marketing/: Dockerfile  next.config.ts  package-lock.json  package.json
apps/platform-api/sales/: 03-datasheet-soulwatch.md  05-pricing-reference.md
apps/platform-api/scripts/: billing_aggregator.py  canary-deploy.sh  deploy-partner-program.sh  phase_f_dryrun.py  stripe-partner-setup.sh
apps/platform-api/sdk/: README.md
apps/platform-api/soulGate/: Dockerfile  __init__.py
apps/platform-api/soulWatch/: .dockerignore  main.py
apps/platform-api/src/: main.py  tier.py  worker.py  worker_handlers.py
apps/platform-api/supportMCP/: requirements.txt
apps/platform-api/tests/: conftest.py  legacy_gating_allowlist.txt  test_partner_admin.py  test_partner_types.py  test_sanitizer_engine.py  test_sanitizer_patterns.py  test_tier.py  test_tool_policy_engine.py
apps/platform-sovereign/: .gitignore  Dockerfile  pyproject.toml
apps/platform-sovereign/src/: main.py
apps/platform-sovereign/tests/: test_main.py  test_principle_registry.py
apps/soul-service/: ARCH.md  Dockerfile  Dockerfile.upstream  LICENSE  PAPER.md  README.md  README.upstream.md  VENDORED.md  pantheon_entry.py  pyproject.toml
apps/soul-service/scripts/: smoke_test.py
apps/soul-service/soul/: __init__.py  compression.py  gcp_config.py  graph.py  hashing.py  local_buffer.py  prefetch.py  serve.py  storage.py  tkhr.py
sdk/: README.md  pyproject.toml
sdk/tiresias/: __init__.py  client.py
tiresias-app-proxy/: SECURITY.md  pyproject.toml
tiresias-app-proxy/docs/: api-reference.md  cedar-policy-guide.md
tiresias-app-proxy/plugins/slack/: manifest.json  plugin.py  relay.py
tiresias-app-proxy/src/app_proxy/: bootstrap.py  config.py
(+3340 files in other folders)
