[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiresias-sdk"
version = "1.0.0"
description = "Python SDK for Tiresias - Zero-trust agent identity and authorization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Saluca LLC", email = "support@saluca.com" },
]
keywords = ["tiresias", "soulauth", "zero-trust", "agent", "authorization", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://tiresias.saluca.com"
Documentation = "https://tiresias.saluca.com/docs"
Repository = "https://github.com/saluca/tiresias-sdk"
Issues = "https://github.com/saluca/tiresias-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["tiresias"]
