[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiresias-app-proxy"
version = "0.1.0"
description = "Tiresias App Proxy — governs AI agent actions via MCP plugin dispatch and Cedar policy evaluation."
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{ name = "Saluca LLC" }]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "cedarpy>=4.8.0",
    "apscheduler>=3.10.0",
    "structlog>=24.1.0",
    "slack_sdk>=3.27.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
