[project]
name = "soulauth"
version = "1.0.0"
description = "Enterprise Agent Identity & Zero-Trust Authorization System"
requires-python = ">=3.11"

[project.dependencies]
platform-auth = { path = "../../packages/auth/python", develop = true }
platform-memory-client = { path = "../../packages/memory-client/python", develop = true }

[project.scripts]
soulauth = "src.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
