[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soulauth"
version = "1.0.0"
description = "Enterprise Agent Identity & Zero-Trust Authorization System"
requires-python = ">=3.11"
# Runtime dependencies are pinned in requirements.txt and installed by the
# Dockerfile / dev workflow. Local workspace packages (platform-auth,
# platform-memory-client, platform-config, platform-observability) are
# installed explicitly via `uv pip install -e packages/<name>/python` in CI
# and the bootstrap script — PEP 621 path-style dependencies aren't supported.
dependencies = []

[project.optional-dependencies]
workspace = [
  "platform-auth",
  "platform-config",
  "platform-observability",
  "platform-memory-client",
  "platform-secrets",
]

[project.scripts]
soulauth = "src.cli:main"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
