[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiresias-sovereign"
version = "0.1.0"
description = "Sovereign Tiresias policy proxy"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.115.0,<0.120.0",
  "uvicorn[standard]>=0.30.0,<0.35.0",
  "pydantic>=2.0.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pyyaml>=6.0,<7.0",
]

[tool.ruff]
select = ["E", "F", "W", "C90"]
ignore = []
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
